--- a/main.css
+++ b/main.css
@@ -129,3 +129,14 @@ html, body {
     transition: 250ms;
     cursor: default;
 }
+
+#loopius {
+    position: relative;
+    display: inline;
+    text-align: left;
+}
+
+.flexbox1 {
+    display: flex;
+    flex-direction: row;
+}
